<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">英雄学堂</string>
    <string name="hello_world">Hello world!</string>
    <string name="Str_Login">登录</string>
    <string name="Str_UsrName">" 用 户 名 "</string>
    <string name="Str_UsrPsw">" 密      码 "</string>
    <string name="Str_hint">" 请输入用户名"</string>
    <string name="Str_sentBtn">发送广播</string>
    <string name="Str_PswCbx"> " 记住密码"</string>
    <string name="Str_AutoCbx">" 自动登录"</string>
    <string name="Str_AsheBgStory">——艾希</string>
    <string name="str_searchHint">请输入您要搜索的英雄名</string>
    <string name="str_modifypsw">修改密码</string>
    <string name="str_confirmpsw">" 请确认密码"</string>
    <string name="str_inputnewpsw">" 请输入新密码"</string>
    <string name="str_oldpsw">" 原密码"</string>
    <string name="str_modifyAcount">注册用户密码修改</string>
    <string name="str_servername">"游戏大区："</string>
    <string name="str_lolname">"召唤师名："</string>
    <string name="str_lolnameInputHint">"  请输入召唤师名"</string>
    <string name="str_char1">丶</string>
    <string name="str_char2">灬</string>
    <string name="str_char3">丨</string>
    <string name="str_char4">丿</string>
    <string name="str_char5">阝</string>
    <string name="str_skill">技能</string>
    <string name="str_equip">出装</string>
    <string name="str_story">故事</string>
    <string name="str_strategy">攻略</string>
    <string name="str_attack">攻</string>
    <string name="str_magic">法</string>
    <string name="str_defence">防</string>
    <string name="str_difficult">难</string>
    <string name="str_coin">金币:</string>
    <string name="str_coupon">点券:</string>
    <string name="str_confirm">确定</string>
    <string name="str_cancel">取消</string>
    <string name="str_selectserver">请选择大区</string>
    <string name="str_actionbarTitle">我的收藏</string>
    <string name="str_dialogText">" 全军出击.."</string>
    <string name="str_ti">提</string>
    <string name="str_mo">莫队长</string>
    <string name="str_searchResult">为您找到以下结果:</string>
    <string name="str_clearAndBack">清除搜索结果并返回...:</string>
    <string name="str_registTitle">注册用户</string>
    <string name="str_regInputHint">"请输入用户名或邮箱 *"</string>
    <string name="str_regInputHint2">"请输入密码,不少于6位 *"</string>
    <string name="str_regInputHint3">"确认密码 *"</string>
    <string name="str_regInputHint4">"请输入邮箱 *"</string>
    <string name="str_regshowPsw">显示密码</string>
    <string name="str_regbackToLogin">"已有账号？直接登录 >> "</string>
    <string name="str_regist">"注  册"</string>
    <string name="str_operateSkill">" 操作技巧"</string>
    <string name="str_defenseSkill">" 对抗思路"</string>
    <string name="str_skillIntro">" 技能介绍"</string>
    <string name="str_splashText1">"-英雄数据查询"</string>
    <string name="str_splashText2">"-出装攻略"</string>
    <string name="str_splashText3">"-战斗力查询"</string>
    <string name="str_likeText">" 最佳拍档"</string>
    <string name="str_hateText">" 最强对手"</string>
    <string name="str_backgroundStory">" 背景故事"</string>
    <string name="str_loginTitle">"User Login"</string>
    <string name="str_loginInputHint">" 请输入用户名"</string>
    <string name="str_loginRegist">"注册账号"</string>
    <string name="str_loginThird">"使用以下方式登录"</string>
    <string name="str_loginWeibo">"微博"</string>
    <string name="str_loginWeixin">"微信"</string>
    <string name="str_loginQQ">"QQ"</string>
    <string name="str_camera">"拍照"</string>
    <string name="str_gallary">"从手机相册选择"</string>



    <string name="umeng_share">分享</string>
    <string name="umeng_auth">授权</string>
    <string name="umeng_deleauth">清除对应授权</string>
    <string name="umeng_shake">摇一摇</string>
    <string name="umeng_comment">评论相关</string>
    <string name="umeng_openshare">打开分享面板</string>
    <string name="umeng_openshare_custom">打开自定义分享面板</string>
    <string name="umeng_sharebutton_custom">自定义分享按钮</string>
    <string name="umeng_share1">默认分享面板可编辑分享页</string>
    <string name="umeng_share2">自定义分享面板可编辑分享页</string>
    <string name="umeng_share3">单平台直接分享</string>
    <string name="umeng_share4">多平台直接分享</string>
    <string name="umeng_share5">默认分享面板可编辑分享页多平台</string>

    <string name="umeng_shakeshotscreen">摇一摇截屏</string>
    <string name="umeng_shakeshare">摇一摇分享</string>
    <string name="umeng_registershake">注册摇一摇</string>

    <string name="umeng_comment1">用户信息</string>
    <string name="umeng_comment2">本地登陆</string>
    <string name="umeng_comment3">本地授权</string>
    <string name="umeng_comment4">好友功能</string>
    <string name="umeng_comment5">评论功能</string>
    <string name="umeng_comment6">注销</string>
    <string name="umeng_comment7">解决事例</string>

    <string name="umeng_nativequery">本地登陆信息查询</string>
    <string name="umeng_loginsina">登陆新浪</string>
    <string name="umeng_logoutsina">登出新浪</string>
    <string name="umeng_loginqq">登陆QQ</string>
    <string name="umeng_logoutqq">登出QQ</string>
    <string name="umeng_loginqzone">登陆QQ空间</string>
    <string name="umeng_logoutzone">登出QQ空间</string>
    <string name="umeng_customlogin">自定义登陆</string>

    <string name="umeng_addfriend">添加好友</string>
    <string name="umeng_getfriendlist">获取好友列表</string>

    <string name="umeng_commentmodular">评论模块</string>
    <string name="umeng_getcommentlist">获取评论列表</string>
    <string name="umeng_sendcomment">发出评论</string>

    <string name="action_settings">设置</string>
    <string name="actionbar_activity_not_found">Failed to open intent...</string>
    <string name="share_by_weixin">微信分享</string>
    <string name="share_by_qq">QQ分享</string>
    <string name="share_by_yixin">易信分享</string>
    <string name="shake_share">注册摇一摇截图（分享）</string>
    <string name="shake_openshare">注册摇一摇（打开分享面板）</string>
    <string name="shake_scrshot">注册摇一摇（截图）</string>
    <string name="take_scrshot">直接截图</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="stop">停止</string>
    <string name="quit">退出</string>
    <string name="video_start_time">00:00</string>
    <string name="goto_video">摇一摇视频截图Activity</string>
    <string name="goto_game">游戏Activity</string>
    <string name="goto_common">普通Activity</string>
    <string name="video">VideoActivity</string>
    <string name="game">GameActivity</string>
    <string name="common">CommonActivity</string>
    <string name="back">返回</string>

    <string name="custom_platform_share">自定义平台分享</string>
    <string name="login_sina">登录（新浪微博）</string>
    <string name="logout_sina">注销登录（新浪微博）</string>
    <string name="login_qq">登录（QQ）</string>
    <string name="logout_qq">注销登录（QQ）</string>
    <string name="login_qzone">登录（QQ空间）</string>
    <string name="logout_qzone">注销登录（QQ空间）</string>
    <string name="whatsapp_share">whatsapp分享</string>
    <string name="line_share">line分享</string>
    <string name="tumblr_share">tumblr分享</string>
    <string name="kakao_share">Kakao Talk分享</string>
    <string name="flickr_share">flickr分享</string>
    <string name="fb_app_id">567261760019884</string>
    <string name="photo_post">Photo Post</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating Facebook status at </string>
    <string name="ok">OK</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="facebook_app_id">1266254913438718</string>
    <string name="perm">需要权限:</string>
    <string name="umeng_self_check">自检工具</string>
</resources>
