<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Str_Login"
        android:textSize="50dp"
        android:id="@+id/button"
        android:layout_below="@+id/textView2"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:text="@string/Str_UsrName"
        android:id="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:text="@string/Str_UsrPsw"
        android:id="@+id/textView2"
        android:layout_below = "@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_marginTop="72dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/UserName"
        android:hint  = "@string/Str_hint"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/UserPsw"
        android:password="true"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Str_sentBtn"
        android:id="@+id/sentBtn"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/button" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Str_PswCbx"
        android:id="@+id/cbx_psw"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Str_AutoCbx"
        android:id="@+id/cbx_autologin"
        android:layout_below="@+id/button"
        android:layout_toEndOf="@+id/cbx_psw" />


</RelativeLayout>
