<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="10dp"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="@string/str_modifyAcount"
        />
    <com.arbo.hero.util.ClearEditText
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:textColor="#746161"
        android:textSize="15dp"
        android:id="@+id/oldpsw"
        android:hint="@string/str_oldpsw"
        android:inputType="textPassword"
        android:textColorHint="#878787"
        android:drawableLeft="@drawable/blank_icon"
        android:drawableRight="@drawable/common_searchbar_clear"
        android:background = "@drawable/login_edittext"
        />
    <com.arbo.hero.util.ClearEditText
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:textSize="15dp"
        android:textColor="#746161"
        android:id="@+id/newpsw"
        android:inputType="textPassword"
        android:hint="@string/str_inputnewpsw"
        android:textColorHint="#878787"
        android:drawableLeft="@drawable/blank_icon"
        android:drawableRight="@drawable/common_searchbar_clear"
        android:background = "@drawable/login_edittext"
        />
    <com.arbo.hero.util.ClearEditText
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="15dp"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:textColor="#746161"
        android:id="@+id/newpsw2"
        android:inputType="textPassword"
        android:hint="@string/str_confirmpsw"
        android:textColorHint="#878787"
        android:drawableLeft="@drawable/blank_icon"
        android:drawableRight="@drawable/common_searchbar_clear"
        android:background = "@drawable/login_edittext"
        />
    <Button
        android:id="@+id/changePsw"
        android:layout_marginTop="5dp"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:text="@string/str_modifypsw"
        android:background="@drawable/login_edittext"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#686767"
        />

</LinearLayout>