<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:background="#bebdbd"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_camera"
            android:background="#e6e5e5"
            android:textSize = "18sp"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#a1a1a1"
            />
        <Button
            android:background="#e6e5e5"
            android:id="@+id/gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_gallary"
            android:textSize = "18sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#a1a1a1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <Button
            android:background="#e6e5e5"
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_cancel"
            android:textSize = "18sp"
            />
    </LinearLayout>


</LinearLayout>