<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/timobg">
        <TextView
            android:id="@+id/ti"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_ti"
            android:textSize="40sp"
            android:textColor="#f0f0f0"
            />
        <TextView
            android:layout_toRightOf="@+id/ti"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_mo"
            android:textSize="20sp"
            android:textColor="#f0f0f0"
            />
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_searchResult"
            android:textColor="#f0f0f0"
            />
    </RelativeLayout>


    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/search_gridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="auto_fit"
        android:columnWidth="80dp"
        android:horizontalSpacing="10dp"
        android:verticalSpacing = "0dip"
        android:gravity="center"
        >
    </GridView>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/championseparator"
        />
    <LinearLayout
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:id="@+id/notfoundlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/notfoundimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/notfound"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/notfoundtv"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <Button
        android:id="@+id/clearback"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_clearAndBack"
        android:textColor="#797979"
        android:background="#00000000"
        />
</LinearLayout>